--- a/info/task_description.html
+++ b/info/task_description.html
@@ -26,5 +26,5 @@ checkio("a1-h8") == 6, "Fifth"
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    This can help for game mechanics and learning the paths searching algorithms.
+    This task can help you for learning game mechanics and the paths searching algorithms.
 </p>
