--- a/info/task_description.html
+++ b/info/task_description.html
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-    You are given start and final squares as chess coordinates separated by a hyphen.
+    You are given the start and end squares as chess coordinates separated by a hyphen.
     You should find the length of the shortest path for the knight from one point to another on the chessboard.
 </p>
 <p style="text-align: center;">
@@ -39,9 +39,9 @@ checkio("a1-h8") == 6, "Fifth"
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    Let's remember about chess and look how we can use pathfinding and computer science in this awesome game.
+    Let's think about chess and how we can use pathfinding and computer science to play this awesome game.
     The game structure and nature of chess is related to several branches of mathematics.
-    Many combinatorical and topological problems connected to chess were known of for hundreds of years.
+    Many combinatorial and topological problems connected to chess have been known for hundreds of years.
 </p>
 
 <p>
