--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-Find the shortest path for the knight from one point to another on the chessboard.
+Find the shortest path for a knight crossing a chessboard.
