--- a/info/task_description.html
+++ b/info/task_description.html
@@ -28,14 +28,26 @@
 
 <p><strong>Output: </strong>The number of moves in the shortest path the knight can take as an integer.</p>
 
+<div class="for_info_only">
 <p><strong>Example:</strong></p>
-<pre class="brush: python">checkio("b1-d5") == 2, "First"
-checkio("a6-b8") == 1, "Second"
-checkio("h1-g2") == 4, "Third"
-checkio("h8-d7") == 3, "Fourth"
-checkio("a1-h8") == 6, "Fifth"
+{% if interpreter.slug == "js-node" %}
+<pre class="brush: javascript">
+knightPath("b1-d5") == 2
+knightPath("a6-b8") == 1
+knightPath("h1-g2") == 4
+knightPath("h8-d7") == 3
+knightPath("a1-h8") == 6
 </pre>
-
+{% else %}
+<pre class="brush: python">
+knight_path("b1-d5") == 2
+knight_path("a6-b8") == 1
+knight_path("h1-g2") == 4
+knight_path("h8-d7") == 3
+knight_path("a1-h8") == 6
+</pre>
+{% endif %}
+</div>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
