--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -33,14 +33,26 @@
     <strong>Выходные данные: </strong>
     Число ходов в кратчайшем пути коня, как целое число.
 </p>
-
+<div class="for_info_only">
 <p><strong>Примеры:</strong></p>
-<pre class="brush: python">checkio("b1-d5") == 2, "First"
-checkio("a6-b8") == 1, "Second"
-checkio("h1-g2") == 4, "Third"
-checkio("h8-d7") == 3, "Fourth"
-checkio("a1-h8") == 6, "Fifth"
+{% if interpreter.slug == "js-node" %}
+<pre class="brush: javascript">
+knightPath("b1-d5") == 2
+knightPath("a6-b8") == 1
+knightPath("h1-g2") == 4
+knightPath("h8-d7") == 3
+knightPath("a1-h8") == 6
 </pre>
+{% else %}
+<pre class="brush: python">
+knight_path("b1-d5") == 2
+knight_path("a6-b8") == 1
+knight_path("h1-g2") == 4
+knight_path("h8-d7") == 3
+knight_path("a1-h8") == 6
+</pre>
+{% endif %}
+</div>
 
 
 <p class="for_info_only">
