--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,11 +1,11 @@
 <p>
-    Sofi found a chess set in the supply closet on the robots ship. She has decided to learn how to play the game of
-    chess starts by attempting to understand how the knight moves.
+    Sofi has found a chess set in the supply closet on the robots ship and decided to learn how to play the game of
+    chess. She figured she’d start from attempting to understand of how the knight moves.
 <p>
 
 <p>
-    Chess is played on a square board of eight rows (called ranks and denoted with numbers 1 to 8) and eight columns
-    (called files and denoted with letters a to h) of squares.
+    Chess is played on a square board of eight rows (called ranks and denoted by the numbers from 1 to 8) and eight columns
+    (called files and denoted by the letters from a to h) of squares.
 </p>
 <p>
     The knight moves to any of the closest squares that are not on the same rank, file, or diagonal,
